--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     color: rgb(255, 240, 240);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     transition: all;
     transition-duration: .3s;
     border: none;
@@ -77,6 +77,7 @@ body{
     color: white;
     padding: .3em 1em .3em;
     margin-top: 1.3rem;
+    display: block;
 }
 .formulario__notify{
     font-size: .6em;
@@ -122,7 +123,6 @@ footer h2,footer a{
 footer a:hover{
     text-decoration: underline;
 }
-
 @media (max-width:700px){
     html{
         font-size: 12px;
@@ -153,8 +153,6 @@ footer a:hover{
     }
 
 }
-
-
 #alerta-incompatible{
     background-color: #E50914;
     width: 100%;
