--- a/css/movie.css
+++ b/css/movie.css
@@ -6,117 +6,122 @@
     border:none;
     text-decoration: none;
     text-transform: capitalize;
-    transition: all .1s linear;
+    transition: all .1s linear; 
 }
 
 :root{
     scroll-behavior: smooth;      /*raiz{comportamiento de desplazamiento: suave}*/
+    --border: 2px solid rgb(0,0,0);
+    --fondoNegroTranparente: rgb(0, 0, 0, 0.5);
+    --trasicion: all .1s linear;
 }
 
-body{  /*El tamaño po default es el 100% de la pantalla*/
+body{ 
     font-family: sans-serif;
-    /* display: flex;
-    flex-direction: column; */
-    overflow-y: scroll;
-    overflow-x: hidden; /*Ocultar*/
+    overflow-x: hidden;            /*Scroll-x, lo ocultamos*/
 }
 
-/*webkit para el scroll*/
-::-webkit-scrollbar {
+::-webkit-scrollbar {              /*webkit para el scroll*/
     width: 15px;
     height: 8px;
 }
-::-webkit-scrollbar-track {
-    background-color:  rgba(241, 236, 233, 0.979);  /*El fondo del scroll*/
-    
+::-webkit-scrollbar-track {                             /*El fondo del scroll*/
+    background-color:  rgba(241, 236, 233, 0.979);  
 }
-::-webkit-scrollbar-thumb {
-    background-color: rgb(99, 98, 98);       /*El fondo cuando se indica al scroll */
-}
-:hover::-webkit-scrollbar-thumb {
-    background-color: rgb(167, 167, 167);       /*El fondo cuando no se indica al scroll */
-}
+::-webkit-scrollbar-thumb {                             /*El fondo cuando se apunta al scroll */
+    background-color: rgb(48, 48, 48);             
+}       
+:hover::-webkit-scrollbar-thumb {                       /*El fondo cuando no se indica al scroll */
+    background-color: rgb(99, 98, 98);          
+}   
 
-
+/****ENCABEZADO****/
 .header{
-   /*100% de lo ocupa la pantalla*/
-    height: 100%;      /*Este ocupará el 90% de la pantalla, al tamño que sea*/
+    height: 100%;     
     width: 100%;
-    display: flex;    /*Colocamos un bloque al lado de otro dentro del header*/
-    background: rgb(0, 0, 0, 0.5);
-    background-repeat: no-repeat;
+    display: flex;                                      /*Colocamos un bloque al lado de otro dentro del header*/
+    background: var(--fondoNegroTranparente);
+    background-repeat: no-repeat;                       /*Para background-image, valores de round, repeat, space, no-repeat */
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed;                       /*valores: scroll, fixed*/
     background-position: center;
-    overflow: hidden;   /*Lo que se desbordese oculte*/
-    z-index: 5;
-}
-.header__video{
-    height: 100%;
-    width:  120%;
-    opacity: 60%;
-}
-
-.menu{ 
-    position: fixed;
-    display: flex;
-    background-image: linear-gradient(to top, rgb(19, 19, 19) 0%, rgb(0, 0, 0) 50%, rgb(220, 61, 61)  85% );
-    border: none;
-    overflow: hidden;
-    color: white;
+    overflow: hidden;                                   /*Lo que se desborde en el contenedor se oculta*/
     z-index: 10;
 }
-.menu-left{
-    display: flex;
-    width: 50%;
-    justify-content: flex-start;  /*Alineamos al inicio*/
-    align-items: center;   
-    text-align: ce;
-    color:inherit
+.header__video{
+    width:  110%;                                       /*Ojo:El alto ya está definido por el ancho*/
+    opacity: 60%;
 }
-.menu-right{
-    display: flex;
-    width: 50%;
-    justify-content: flex-end;  /*Alineamos al final*/
-    align-items: center;   
-    color:inherit
-}
-.menu__icon1{
-    padding: 10% 5% 10% 5%;
-}
-.menu__icon2{
-    height: 1.5em;
-    width: 6em;
-    filter: brightness(100%);
-    margin: 0  50% 0 1%;
-}
-.menu__icon3{
-    padding: 10% 5% 10% 5%;
-}
-.menu__icon4{
-    padding: 10% 5% 10% 5%;
-}
-.menu>label>span:hover{
-    background-color: black;
+/**NAV-MENU-**/
+.header-nav{ 
+    position: fixed;                                    /*El contenedor se queda fijo, incluso al scrollear*/
+    background-color: transparent;
+    display: inherit;                                   /*Se uestra tipo flexible(lo hereda del header)*/
+    overflow: hidden;
+    width: 100vw;
+    height: 8%;
     color: white;
+    z-index: 200; 
 }
-
+.change-nav{
+    background-image: linear-gradient(to top, rgb(19, 19, 19) 0%, rgb(0, 0, 0) 50%, rgb(220, 61, 61) 85% );
+   
+}
+/**PARTES DEL NAV-**/
+.header-nav > div{
+    display: flex;
+    width: 50%;
+    align-items: center;   
+    color:inherit
+}
+.nav-left{
+    justify-content: flex-start;  /*Alineamos al inicio*/
+}
+.nav-right{
+    justify-content: flex-end;  /*Alineamos al final*/
+}
+.nav-left__icon1{
+    padding: 5% 5% 5% 5%;
+}
+.nav-left__icon2{
+    height: 25px;
+    filter: brightness(100%);
+    margin:  20% 10% 10% 10%;
+}
+.nav-left a{
+    width: 12%;
+}
+.nav-right__icon3{
+    padding: 5% 5% 5% 5%;
+}
+.nav-right__icon4{
+    padding: 5% 5% 5% 5%;
+}
+.header-nav>div>span:hover{
+    background-color: black;
+}
+/**BTN-PUNTOS**/
 .container-points{
     position: fixed;
-    width: 100%;
-    margin-top: 4.5em;
-    transition: all .1s linear;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 60px;
+    width: 300px;
+    right: 0;
+    top: 7%;
+    transition: var(--trasicion);
+   
     transform: translate(100%);
 }
 .spread{
     transform: translate(0%);
 }
 .container-points>a{
-    display: flex;
-    margin-left: 80%;
-    background-color: rgb(9, 9, 8);
+    text-align: center;
+    background-color: rgba(9, 9, 8, 0.898);
     color: white;
-    justify-content: center;
+    /* justify-content: center; */
     border-radius: 1px;
     font-size: 1em;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -126,104 +131,95 @@ body{  /*El tamaño po default es el 100% de la pantalla*/
     color: black;
     border: 2px solid black;
 }    
-
+/**CONTENIDO**/
 .container-content{
     position: absolute;
     display: block;
-    width: 60%;
+    flex-wrap: wrap;
+    margin-top: 15%;
+    left: 5%;
+    width: 50%;
     height: 42%;
-    margin: 15% 0 0 5%;
     padding: 1px 1px 1px 1px;
     align-items: center;
-    z-index: 0;
+    z-index: 10;
 }
 .content-top{
     display: flex;
     height: 10%;
-    align-items: inherit;
-    margin: 0; 
+    align-items: center;
 }
 .container-content__img{
     width: 5%;
     height: 100%;
 }
 .container-content__toph2{
-    font-size:100% ;
+    margin-top: 20px;
+    font-size:100%;
     letter-spacing: 0.8em;
     font-family: Arial, Helvetica, sans-serif ;
     color: #fff;   
 }
 
 .content-medium{
-    height: 40%;
+    height: 50%;
     align-items: inherit;
     font-family: 'Syne Tactile', cursive;
 }   
 .container-content__med-h1{
-    margin: 0;
+    margin:0 ;
+    font-size: 4em;
     font-family: inherit;
     font-weight: lighter;
     color: rgb(179, 161, 0);  
 }
 .container-content__med-h2{
-    margin: 1% 0 0 2%;
+    margin: 0;
     font-size: 2em;
     font-family: inherit;
     color: rgb(255, 255, 255);  
 }
 
 .content-bottom{
-    display: flex;
-    align-items: center;
-    padding: 2% 3% 0% 3%;
+    padding: 3% 3% 3% 3%;
     height: 22%;
 }
-.container-content__play{
+.content-bottom > button{
     background-color: rgba(108, 145, 214, 0.4);
-    padding: 9px 2% 9px 2%;
+    padding: 8px 5% 8px 5%;
     border: none;
     border-radius: 5px;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    margin-left: 10%;
-}
-.container-content__list{
-    background-color: rgba(108, 145, 214, 0.4);
-    padding: 9px 2% 9px 2%;
-    border: none;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    cursor: pointer;
-    margin-left: 10%;
+    margin-left: 12%;
+    
 }
 .container-content__play:hover{
     background-color: rgb(255, 255, 255, 0.7);
     color: rgb(0, 0, 0);
-    transition: all .3s ;
+    transition: all .3s linear ;
 }
 .container-content__list:hover{
     background-color: rgb(255, 255, 255, 0.7);
     color: rgb(0, 0, 0);
-    transition: all .3s ;
+    transition: all .3s linear;
 }
 
-/*Contenedor volumen*/
+/**VOLUMEN**/
 .container-vol{
     display: flex;
     position: absolute;
-    justify-content: flex-end;
-    width: 40%;
-    margin-top: 38%;
-    margin-left: 60%;
+    width:30%;
+    margin-top: 32%;
+    right: 0px;
     cursor: pointer;
-    z-index: 2;    
-
-    transition: all .4s linear;
-    transform: translate(10%);
+    z-index: 10;    
+    overflow: hidden;
+    transition: all .3s linear;
+    transform: translate(35%);
 }
 .container-vol:hover{
-    transform: translate(0%);
-    transform-origin: center;
+    transform: translate(25%);
 }
 .container-vol__vol{
     width: 40px;
@@ -231,26 +227,26 @@ body{  /*El tamaño po default es el 100% de la pantalla*/
     border: 2px solid rgb(255, 255, 255);
     border-radius: 50%;
     color: #fff;
-    padding: 0.6em;
+    padding: 0.6em 1.2em 0.6em 0.6em;
     background-color: rgba(107, 107, 107, 0.4);
     margin-right: 5px;
 }
 .container-vol__bar{
     background-color: rgba(10, 10, 10, 0.4);
     border-left: 3px solid #fff;
-    width: 12em;
+    width: 26em;
 }
-
+/**BÚSQUEDA**/
 .container-search{
     position: fixed;
+    display: inline-flex;
+    justify-content: center;
     height: 100%;
     width: 100%;
     opacity: 75%;
     border-radius: 5px;
     background-color: rgb(61, 54, 54);
-    z-index: 20;
-    display: inline-flex;
-    justify-content: center;
+    z-index: 300;
 
     transition: transform .2s linear;
     transform: translate(150%);
@@ -273,8 +269,8 @@ body{  /*El tamaño po default es el 100% de la pantalla*/
 }
 .container-search__icon1{
     margin-top: 55px;
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
     color: black;
     background: rgba(242, 0, 0, 0.987);
 }
@@ -282,70 +278,119 @@ body{  /*El tamaño po default es el 100% de la pantalla*/
     background: black;
 }
 
-/*Menu de peliculas*/
+/****MAIN DE PELICULAS****/
 main{
     background-color: rgb(19, 19, 19);
     width: 100%;
 }
-/*Estilos de Materialize*/
-.carousel{
-    min-height: 500px;
+.section-movies{
+	width: 90%;
+	margin: auto;
 }
 .section-movies__title{
     margin: 0;
+    padding: 2% 3% 1% 3%;
     font-size: 30px;
     font-family: 'Dancing Script';
-    padding: 2% 3% 0% 3%;
     color: #fff;
 }
-.carousel .carousel-item{
-    flex-direction: column; /*Elementos uno abajo de otro*/
-    justify-content: center; 
-    align-items: center;  
-    user-select: none;   /*Para que el usuario al deslizar no seleccione un item o un texto*/
-    background: none;
-    width: 300px;   
-    height: 450px
-    /* user-select: none;*/ /*Para que el usuario al deslizar no seleccione un item o un texto*/
- }
- .carousel .carousel-item:hover{
-    background-color: rgb(192, 44, 39);
-    padding: 2px 2px 2px 2px;
- }
- .carousel-item .movies-popular___img{
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    /* object-fit: cover;  */ /*Par que la imágen no se deforme, toma todo el entorno*/
-    position: absolute;
-    z-index: -1;           /*Para acomodar una imagen detras de  o delnate de, las im tiene z-index=0*/
-    border-radius: 5px;
+.carousel__img{
+    height: 300px;
+    width: 250px;
 }
-.carousel-item .movies-popular___img:hover{
-    background-color: rgb(192, 44, 39);
-    padding: 2px 2px 2px 2px;
- }
-/*Para deslizar la imagen*/
-.carousel .indicators .indicator-item{
-    /* border-radius: 0;
-    transform: rotate(45deg); */
-    /*margin: 0 15px;*/      /*Margen arriba-abajo  derecha-izquierda  */
-    /* background: #ca2f00; */
-    display: none;
-}
-.movies-popular__info{
-    display: none;
+.carousel__elemento>p{
+   display: none;
 }
 
-/*ShowCase de redes sociales*/
+/**CAROUSEL**/
+.carousel__contenedor {
+    position: relative;
+}
+.carousel__anterior,
+.carousel__siguiente {
+	position: absolute;
+	display: block;
+	width: 30px;
+	height: 30px;
+	border: none;
+	top: calc(50% - 35px);
+	cursor: pointer;
+	line-height: 30px;
+	text-align: center;
+	background: rgba(165, 9, 9, 0.911);
+	color: #fff;
+	opacity: 30%;
+}
+.carousel__anterior:hover,
+.carousel__siguiente:hover {
+	opacity: 100%;
+}
+.carousel__anterior {
+	left: -30px;
+}
+.carousel__siguiente {
+	right: -30px;
+}
+.carousel__lista {
+	overflow: hidden;
+}
+.carousel__indicadores .glider-dot {
+	display: block;
+	width: 30px;
+	height: 4px;
+	background: #fff;
+	opacity: .2;
+	border-radius: 1px;
+}
+.carousel__indicadores .glider-dot:hover {
+	opacity: .5;
+}
+.carousel__indicadores .glider-dot.active {
+	opacity: 1;
+}
+
+/**Show-image**/
+.show-image{
+    height: 100vh;
+    width: 100%;
+    top:0; 
+    left:0;
+    display: none;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 120;
+    background-color: rgba(0,0,0,.7);
+
+    padding:100px 20px;
+ }
+ .show-image img{
+    width:300px;
+    cursor: pointer;
+    border:2px solid white;
+    background-color: white;
+ }
+ .show-image p{
+    width:300px;
+    padding: 10px 0;
+    color: white;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family:'Syne Tactile', cursive;
+    text-align: center;
+ }
+
+ 
+/**REDES SOCIALES**/
 .social {
-    padding: 40px 20px;
+    padding: 70px 20px;
 }
 .social p {
     text-align: center;
-    font-size: 30px;
-    margin-bottom: 20px;
+    font-size: 25px;
+    padding: 10px 1px;
     color:rgb(255, 255, 255)
 }
 .links {
@@ -355,12 +400,13 @@ main{
 }
 .links a {
     margin: 0 30px;
+    color: rgb(220, 61, 61);
 }
-  
 .links a i {
     font-size: 3rem;
 }
-/*Footer copyright*/
+
+/**FOOTER COPYRIGHTt**/
 .footer {
     margin: 0;
     background: #000000;
@@ -384,11 +430,10 @@ main{
 }
   
 
-
 @media(max-width:750px){
-    
+
     .content-top{
-        height: 5%;
+        height: 1 vh;
     }
     .container-content__toph2{
         font-size: 0.8em;
@@ -403,11 +448,14 @@ main{
         font-size: 1em;
     }
     .content-bottom{
-       height: 10%;
+        height: 10%;
+    }
+    .content-bottom>button{
+        margin: 0;
     }
 }
 
-@media(max-width:450px){
+@media(max-width:480px){
     .content-top{display: none;}
     .content-medium{display: none;}
     .content-bottom{display: none;}
@@ -415,9 +463,13 @@ main{
         font-size: 0.5em;
     }
     .container-vol{
-        width: 40%;
-        margin-top: 29%;
-        margin-left: 20%;
+        margin-top: 20%;
+        width: 50%;
+        transition: none;
+        transform: none;
+    }
+    .container-vol:hover{
+        transform: none;
     }
     .container-vol__bar{
         display: none;
@@ -436,7 +488,7 @@ main{
     .container-search__icon1{
         margin: 0;
     }
-        .container-points>a{
+    .container-points>a{
         font-size: 0.5em;
     }
 }
