--- a/css/movie.css
+++ b/css/movie.css
@@ -498,7 +498,6 @@ main{
     .container-content{
         height: 35%;
     }
-
     .container-content__toph2{
         font-size: 0.9em;
     }
@@ -551,28 +550,28 @@ main{
 }
 
 @media(max-width:480px){
-    .content-top{display: none;}
-    .content-medium{display: none;}
-    .content-bottom{display: none;}
+    .container-content{display: none;}
     .container-points{
        top: 5.5%;
        width: 200px;
        font-size: 12px;
     }
     .container-vol{
-        margin-top: 20%;
-        width: 50%;
-        transition: none;
-        transform: none;
+        margin-top: 20%; 
+        width: 50%; 
+        z-index: 1000;
     }
     .container-vol:hover{
-        transform: none;
+        width: 50%;
     }
     .container-vol__bar{
-        display: none;
+        visibility: hidden;
     }
     .section-movies h2{
-        font-size: 20px;
+        font-size: 15px;
+    }
+    .carousel__img{
+        height: 250px;
     }
     .show-image img{
         width:200px; 
@@ -580,7 +579,6 @@ main{
     .show-image p{
         font-size: 13px;
     }
-
     .social{
         padding: 2rem;
     }
@@ -593,10 +591,8 @@ main{
     .footer h3{
         font-size: 20px;
     }
-
 }
 @media(max-width:220px){
-
     .container-vol{
         display: none;
     }
@@ -609,6 +605,9 @@ main{
     }
     .container-points{
         width: 100px;
+    }
+    .section-movies h2{
+        font-size: 10px;
     }
     .show-image img{
         width:150px; 
